# ChangeLog for dev-python/boto
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/boto/ChangeLog,v 1.60 2013/05/21 07:46:06 radhermit Exp $

*boto-2.9.4 (21 May 2013)

  21 May 2013; Tim Harder <radhermit@gentoo.org> +boto-2.9.4.ebuild:
  Version bump.

*boto-2.9.3 (16 May 2013)

  16 May 2013; Tim Harder <radhermit@gentoo.org> +boto-2.9.3.ebuild:
  Version bump.

*boto-2.9.2 (01 May 2013)

  01 May 2013; Tim Harder <radhermit@gentoo.org> +boto-2.9.2.ebuild:
  Version bump.

  20 Feb 2013; Matthew Thode <prometheanfire@gentoo.org> boto-2.1.1.ebuild:
  added comment to boto-2.1.1 to hopefully prevent bad pruning

  20 Feb 2013; Matthew Thode <prometheanfire@gentoo.org> boto-2.1.1.ebuild:
  readding boto-2.1.1 as sys-cluster/nova requires it

  05 Feb 2013; Tim Harder <radhermit@gentoo.org> -boto-2.0.ebuild,
  -boto-2.1.1.ebuild, -boto-2.2.2.ebuild, -boto-2.2.2-r1.ebuild,
  -files/boto-2.2.2-no-install-tests.patch, -boto-2.4.1.ebuild,
  -boto-2.5.2.ebuild:
  Remove old.

*boto-2.8.0 (05 Feb 2013)

  05 Feb 2013; Tim Harder <radhermit@gentoo.org> +boto-2.8.0.ebuild:
  Version bump.

*boto-2.7.0 (25 Jan 2013)

  25 Jan 2013; Tim Harder <radhermit@gentoo.org> +boto-2.7.0.ebuild:
  Version bump, migrate to distutils-r1 (bug #453922).

*boto-2.6.0 (29 Sep 2012)

  29 Sep 2012; Tim Harder <radhermit@gentoo.org> +boto-2.6.0.ebuild:
  Version bump.

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> boto-2.3.0.ebuild:
  sparc stable wrt #416861

*boto-2.5.2 (17 Jul 2012)

  17 Jul 2012; Mike Frysinger <vapier@gentoo.org> +boto-2.5.2.ebuild:
  Version bump #425176 by Ian Delaney.

  13 Jun 2012; Tim Harder <radhermit@gentoo.org> boto-2.3.0.ebuild,
  boto-2.4.1.ebuild:
  Remove unused eutils inherit.

  29 May 2012; Brent Baude <ranger@gentoo.org> boto-2.3.0.ebuild:
  Marking boto-2.3.0 ppc for bug 416861

  21 May 2012; Agostino Sarubbo <ago@gentoo.org> boto-2.3.0.ebuild:
  Stable for amd64, wrt bug #416861
