@@ -9,6 +9,7 @@ DIST boto-2.8.0.tar.gz 743925 SHA256 f520cec579a11c99b510e06d16f484ce877f5b75eea
 DIST boto-2.9.2.tar.gz 875951 SHA256 be7b58fb34a9ceb136c4aadcb3e1a926e8a3fde4ebcc55c940b8c69a9dcbba4a SHA512 fb384d36d1aab5cef668a7e5477fd2ea525162dd388af67115aa04f47fbe060f8683ce147e4a5d31625ee7948a8546d62465dae41911400cbdfc478e02db4cf5 WHIRLPOOL 7c1b1317f84e42659b9b020b9ba83bf225ee853cb2b6ac183796435f4e29577418fe941865a7c71ecb4bde12daae1a1d141d7f87a8a4756342fb6cfbcd1cd388
 DIST boto-2.9.3.tar.gz 915218 SHA256 57ec51f2dbcfe8ef444d355096b55bfbbf6b04b34de700ff79ba7a8cf24ea39d SHA512 b1d4874b8577c258f54a5372a734f953e1ee069eb001728f1dc1d8b66c47168e547f72f749f10ac4f2c283c8f5d155269ae361fef8e6b59c2a178fa92c7f0b7f WHIRLPOOL 30bcc0e53362bd59aa76c0a4c77380a9d6effa63f5c9a3e6e4499dc0bcfee71efcb7aa6d6cd819a479f8f30ad2f410dbbeab57ff9f1f0e441acd67bb57e5057b
 DIST boto-2.9.4.tar.gz 916124 SHA256 9e4747923c1c92c15d330dd29427306af24f05ee2fa6eb80debde0dea1b6bd2f SHA512 051136f68b5055696647f82c111821ddf80a427a9e87681cac94d4c92950ce54f20195fb93e33b83844ee921f09db45c7b973fee60685df7df0fc44e95cb4593 WHIRLPOOL 2b054cfba368f7f97245d41a30b5a272111c58c54a847fd593cfb83d819cddfc72acba969565fc6793335166797e03502e0c78613dacb1b8c478005d973f0f50
+DIST boto-2.9.5.tar.gz 921725 SHA256 4684b9f8ef57b397954089006306d37fc595a4f6ac04882143fd7e861944cab6 SHA512 77881c5a5e8389b92e60e638fba39f534f7d5d10ab4318bdd933b3a156d6003fd7c5fb25a5d00cb5b7e90c0bd03d1e709e0a9e4c27a1889b8ca879f94391ba92 WHIRLPOOL 28eba724e037fd34831b52eaa154b9110c26737a8fbf34c98b91d427f8d1000debad19bdf6d69474705e62c79431f3d28965c8e88651d262c4d64415636fd708
 EBUILD boto-2.1.1.ebuild 864 SHA256 957b383c3cee1c7ba1040210c6f66e91f58069dc6a3875232f10bb743d1ede36 SHA512 df90aaabdd971f4fdf9dd31667ba2662967d9d6447197e026364d3d60e3ab3d7519a619ba054ecaed2e3ca44877772e066e35bb08b3e367b1c36b41305a3a68b WHIRLPOOL 469e724242cf27a1527c8679a23c034ec78656c8d1a3558d0996672d503c49a39268c7934f1dfeb5667401cf40459398034e698e5cf36577cf69f511049747f8
 EBUILD boto-2.3.0.ebuild 777 SHA256 78a311dfde127d44dd52115245fbc6897b7d95e38551e2899cf74e990f7a10b9 SHA512 cfb21ab698d2edeaff817289bab88bc97dfa2e26d9e2190191f6a420cbfa1fefc71d6446654b5e58a0e55f1d345130b58dd36cbe71f9af7df6a950b864590648 WHIRLPOOL 73e305ab381a9cc51985e5ef702dc81fadd07faf27ae897a7e9cc084cb569c18690545a75b0b465f9a08e0d9d349201b22f696b6ee658f54e1e22d68b42e674c
 EBUILD boto-2.6.0.ebuild 783 SHA256 7788bbaf215c663bc74e47585eaa65cd9bc25ddca14b822d42bd4fc70874f363 SHA512 f83b75f3ac9d59ffc67389dc272c0e557e353a4f77dcdf52ed88b8c35d5441be67c048b44e2697dd8f4e45814e263ad67711f0bc63f74a3ee57316237c99d551 WHIRLPOOL 207ea13a882c3968fa196c52a0d0ed0d91d2011ce9f4b41def2333dd11e9cdf41471aaee64cd8374942c736b390322a45d04f5265e81e56a31a1482fbbc61104
@@ -17,16 +18,17 @@ EBUILD boto-2.8.0.ebuild 774 SHA256 4943589a6d7dbf7c09928f4ae75ac16735e929f1a467
 EBUILD boto-2.9.2.ebuild 774 SHA256 a4016e7b595b5056319277b81849f20b5374a59fc7ffd333f83177a71f5ac278 SHA512 1728dea74b56446135423a8d7ce388aaf075a8f5548b7a49eed52c26d6af177b9cf822e41a8721d28315ee6cc9c5e2f00ec8bd09d6c241c1012beb5a6e845973 WHIRLPOOL 0e1e3aa25a38aa3a05bc4fa86b62fa9d521280166f4840073754f658475e90d0826b2b76ea6ca6b55b26eac3684f722380897510f52d3bde6004392fa2d0b356
 EBUILD boto-2.9.3.ebuild 774 SHA256 ebc3e9e8d67e9263776f9be071d256d0dfc7e67285426935daf1586b59d04356 SHA512 51b7ba958f374533168fc575840af63b6763963b6fe0dcbd0add7eca0d27e04c844f4a134898302549ea4f487fc956c067e040382a6e4a7c56d2750913f414c2 WHIRLPOOL b566ab1f219eeb403c5d9cdfa9d3abbc026f6895f93e3e90ca540756e0700ce9181c33e2a1ffd9f3307a9b8e1125a28d77ea72f1354e9aea0bd48fbb20d9b036
 EBUILD boto-2.9.4.ebuild 774 SHA256 3434dfb4b3e46edefb81856dceefd451451219b3a2336a90a3ce60926f8eaba6 SHA512 0a316bb08fb4f120cc5249e6a1f8b05a593b9d5df75fb5021c3c43857500e1708a1e76cb145a98e7e1f1f9a60f5f5cdb18d19fcebbc759bf4c3be35224010fa2 WHIRLPOOL bd3d216f3d514b607b8c373b89376ef20f0c662c6e7ef648b5d3fb3821805779f396ce5a28b0ca8776bd5abb4cd9861fcb2260f7553a06667ff82f8609daa78a
-MISC ChangeLog 7199 SHA256 c21d191d5fb6ff8f918cfd23d1f3b8b51a8f35107fedcb295bf2a617b9d7acc2 SHA512 ad62d89ea07eb5c0d29aa7f21c9621b73931d83290a1af81b41732d76520ef56aaf40d5dcfe9a18569775a7b286a6b530c8f0bd27f127bb6cd543a9b4ce1d886 WHIRLPOOL 898df28530d016c9b1e65466577c6f55ce96cfc45816a2780f46dab4339cc95326edd9ab63704f825525c69eb57e3dc6628080527d713619d7dcfad7205e1bfe
+EBUILD boto-2.9.5.ebuild 774 SHA256 612e6b3bdda49c3e80e702f358f2948661d0e1d34684bc6c2ea84b67268cfdcb SHA512 812a373f5d573ba6c36879da4c3ee39f05c1a7696f33a5e68bb41d8af50833c6b376cf4a5b7642eb61f9a4a9aef0869895de188075d921d5134cae4b910fd110 WHIRLPOOL fcc95a5dbfb8ffb0abba8b6fc48be55fd0473328015eb906b710f3a1d69092b76379fb6173ed35681cde6edd54b6f8d26cf8a144063fc39f8d4f1afb1449bdff
+MISC ChangeLog 7312 SHA256 81f0ac45869afabcc952420387f3dc906d6365870d2d05b35d6b777067e9994a SHA512 3819e80e5bfcda680a1bbd125893a8b3867352a6697b1d5d09f59c093ba9bc1977fca395198df57fc5b7bdc3fac7b48ecb6f15a769c1f0a04cbab0e64dcfe8de WHIRLPOOL d6a17cd4f8dabfe7e31385e29148db7a6c9ed181e886a03f41e89a707b23a9bb6ffdced5b1a34185cffece98a612816f7b41f90e1e9919372e085feecf8b7726
 MISC metadata.xml 298 SHA256 ac95be2c38d5896ff88c2ba8bc63dff03e183ccf83e9fabee9f7285d6dea56a8 SHA512 05d441e559c6bc0495d2b7e64370a7ac0d5f0e57e98d9f539811692b127c4f919f95278b491c7732183e15a5580e92c46474acc417c2c41c9fddd82041916494 WHIRLPOOL 6d8921d57774481113917ce37833bc3e8c19d0e5cf308e826a70307b8ed43c1c0e20a0a9700b413517b909518b78b9a64e1693b7a74b47910239703afa979f79
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRmyY/AAoJEEqz6FtPBkyjXacH/0zc/k7AJeeq6ve/Qe7tMOVS
-DPhRCzStTCJsNpNRlGrQdW3Y8hgkE2p0lhFL2vTO5xl+ivn7xsOYEkSTncTgW1wj
-wR6s/ok9pM3Rna9CjaKpCFmjEf4Dw9XkSrUQBFXruMvbjYOjwBn+7YQgDMuINZLo
-aaW9Bdez8PZMAcvtnL9ASXNvCEPn79H8SSlnqNiparl5ku5ISGuJECP+Sjv+KhtY
-kTHPpW0D+Zn14LF2IaqLoywpsSi2bo6HxbRkP2XXRHsShPXVI6c26/IQQc3hbDih
-K+/0NcS6b/E5QuQZu/8VPNBgT84tXvAaU7+XSzifx+ovg5BGWM77wdqd0v8WG4I=
-=48nR
+iQEcBAEBCAAGBQJRpbvpAAoJEEqz6FtPBkyjctEH/jpqiwqkqfa1+8PhlA/V54Xz
+91gE9emiiZyu3KdBBpnOSB3KQ0eFviVxeaFlAeDJ3i43qksFMDssRqJoBVEtpR70
+0+6IF1ey5ElQ/ff1baIGBhKP9vGNOapf5GtYiT9Gi86C8hC4idpf6xKI5H2mGG9I
+aSFGtZTjr/+9L9uKgcCijy7H0xSEuVDyxE3UmsQCow57W7FPC2N9Yg8CFO3kkZ3e
+gxX7ON5dOJRJERZ2tDM/Gm6GA8CTnwGUPtxgoi1zKSIHhYTSsTXr9cnFAsJyWSid
+AT/qco/LgXVf+KKWCUi4yK6kQdFikSt8cnCWK1g2jKAsLa6RA4jp9H5L2bVeUc8=
+=G3tN
 -----END PGP SIGNATURE-----
